--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -44,69 +44,45 @@
                 {%if 'admin' in user.groups.get.name or 'sapore' in user.groups.get.name  %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Parâmetros
-                    </a>
+                        Parâmetros</a>
                     <ul class="dropdown-menu col-3" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="{% url 'branch_list' %}">Filiais</a>
                         <li class="dropdown-submenu">
                             <a class="dropdown-item dropdown-toggle" data-toggle="dropdown" href="#">
-                                Linhas
-                            </a>
+                                Linhas</a>
                             <ul class="dropdown-menu">
                                 <a class="dropdown-item" href="{% url 'line_plan_list' %}">Planos</a>
+                                <a class="dropdown-item" href="{% url 'line_status_list' %}">Status</a>
+                                <a class="dropdown-item" href="{% url 'line_status_rfp_list' %}">Status RFP</a>
                             </ul>
                         </li>
                         <li class="dropdown-submenu">
                             <a class="dropdown-item dropdown-toggle" data-toggle="dropdown" href="#">
-                                Smartphone
-                            </a>
+                                Smartphones</a>
                             <ul class="dropdown-menu">
                                 <a class="dropdown-item" href="{% url 's_model_list' %}">Modelos</a>
+                                <a class="dropdown-item" href="{% url 's_status_list' %}">Status</a>
                             </ul>
                         </li>
                         <li class="dropdown-submenu">
                             <a class="dropdown-item dropdown-toggle" data-toggle="dropdown" href="#">
-                                Vivobox
-                            </a>
+                                Vivobox</a>
                             <ul class="dropdown-menu">
                                 <a class="dropdown-item" href="{% url 'v_model_list' %}">Modelos</a>
+                                <a class="dropdown-item" href="{% url 'v_status_list' %}">Status</a>
                             </ul>
                         </li>
-                    </ul>
-                </li>
-                {%endif%}
-                {%if 'admin' in user.groups.get.name or user.groups.get.name == 'supporters' %}
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Suporte Sede
-                    </a>
-                    <ul class="dropdown-menu col-3" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="{% url 'dashboard' %}">Dashboard</a>
-                        <a class="dropdown-item" href="{% url 'dashboard' %}">Inventário</a>
-                    </ul>
-                </li>
-                {%endif%}
-                {%if 'admin' in user.groups.get.name or user.groups.get.name == 'printers' %}
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Impressoras
-                    </a>
-                    <ul class="dropdown-menu col-3" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="{% url 'dashboard' %}">Dashboard</a>
-                        <a class="dropdown-item" href="{% url 'dashboard' %}">Inventário</a>
                     </ul>
                 </li>
                 {%endif%}
                 {%if 'admin' in user.groups.get.name or 'telecom' in user.groups.get.name%}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Telecom
-                    </a>
+                        Telecom</a>
                     <ul class="dropdown-menu col-3" aria-labelledby="navbarDropdownMenuLink">
                         <li class="dropdown-submenu">
                             <a class="dropdown-item dropdown-toggle" data-toggle="dropdown" href="#">
-                                Móvel
-                            </a>
+                                Móvel</a>
                             <ul class="dropdown-menu">
                                 {%if 'admin' in user.groups.get.name or 'sapore' in user.groups.get.name  %}
                                 <a class="dropdown-item" href="{% url 'dashboard' %}">Dashboard</a>
@@ -118,17 +94,6 @@
                                 {%endif%}
                             </ul>
                         </li>
-                        {%if 'admin' in user.groups.get.name or 'sapore' in user.groups.get.name  %}
-                        <li class="dropdown-submenu">
-                            <a class="dropdown-item dropdown-toggle" data-toggle="dropdown" href="#">
-                                Fixa
-                            </a>
-                            <ul class="dropdown-menu col-3">
-                                <a class="dropdown-item" href="{% url 'dashboard' %}">Dashboard</a>
-                                <a class="dropdown-item" href="{% url 'line_list' %}">Contratos</a>
-                            </ul>
-                        </li>
-                        {%endif%}
                     </ul>
                 </li>
                 {%endif%}
