--- a/telecom/templates/telecom/index.html
+++ b/telecom/templates/telecom/index.html
@@ -2,6 +2,10 @@
 
 {% block title %}Controle | Sapore{% endblock %}
 
+{% block head %}
+<meta http-equiv='refresh' content='60'>
+{% endblock %}
+
 {% block content %}
 <h1 class="mt-5">Controle Sapore</h1>
 {% endblock %}
