--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -3,6 +3,10 @@
 
 {% block title %}Administração | Sapore{% endblock %}
 
+{% block extrahead %}
+    <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
+{% endblock %}
+
 {% block branding %}
     <h1 id="head">
         <img src="{% static 'img/logo_sapore.png' %}" 
